--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
        "noLib":false,
        "emitDecoratorMetadata":true,
        "experimentalDecorators":true,
-       "sourceMap":true,
+       "sourceMap":false,
        "pretty":true,
        "forceConsistentCasingInFileNames": true,
        "strict": true,
@@ -16,16 +16,12 @@
        "noImplicitAny":true,
        "noImplicitReturns":false,
        "noImplicitUseStrict":false,
-       "outDir":"lib",
-       "rootDir": ".",
-       "baseUrl":"behavior_packs/",
+       "outDir":"js",
+       "rootDir": "./scripts",
        "listFiles":false,
        "noEmitHelpers":true,
        "skipLibCheck": true
     },
-    "include":[ 
-       "scripts/**/*"
-    ],
-    "exclude": ["lib", "dist", "node_modules"],
+    "exclude": ["node_modules"],
     "compileOnSave":false
  }
